selection alignment fix

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -86,6 +86,7 @@ input::-moz-placeholder {
       width: 40%;
       float: right;
       background-color: lightgray !important;
+      padding-left: 10px;
     }
   }
 }
